Update price estimator and typing
